--- a/templates/transactions/items.html
+++ b/templates/transactions/items.html
@@ -124,7 +124,7 @@
 
             <!-- ================= ACTIONS ================= -->
             <div class="d-flex justify-content-end mt-4 gap-2">
-                <a href="/transactions/in" class="btn btn-outline-secondary">
+                <a href="{{ url_for('transaction.list_orders') }}" class="btn btn-outline-secondary">
                     Cancel
                 </a>
                 <button type="submit" class="btn btn-danger">
